fix top menu causing horizontal scrolling

--- a/src/Resources/public/css/ns.css
+++ b/src/Resources/public/css/ns.css
@@ -355,3 +355,9 @@ a.readmore-expander {
     width: 100%;
     text-align: center;
 }
+
+.dropdown-menu.dropdown-close.pull-right {
+    left: auto;
+    right: -5px;
+}
+
